# comms-cli

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  README.md  ROADMAP.md  ci_output.txt  justfile  pyproject.toml  pyrightconfig.json
comms/: accounts.py  agent.py  audit.py  claude.py  cli.py  config.py  contacts.py  daemon.py  db.py  digest.py  drafts.py  health.py  launchd.py  learning.py  models.py  policy.py  proposals.py  sender_stats.py  senders.py  services.py  snooze.py  sync.py  triage.py
comms/adapters/email/: gmail.py  outlook.py  proton.py  resend.py
comms/adapters/messaging/: signal.py
comms/cli/: __init__.py  accounts.py  daemon.py  drafts.py  email.py  helpers.py  proposals.py  signal.py  system.py
comms/migrations/: 001_foundation.sql
tests/unit/: test_accounts.py  test_adapters_gmail.py  test_adapters_resend.py  test_adapters_signal.py  test_agent.py  test_core.py  test_daemon.py  test_health.py  test_learning.py  test_proposals.py  test_services.py  test_triage.py
